<resources>
    <string name="app_name">SV Mailer Test</string>
    <string name="title_activity_main">SV Мэйлер</string>
    <string name="exit_up">ВЫХОД</string>
    <string name="title_left_menu">SV.Mailer</string>
    <string name="tab_all_receipt">Все чеки</string>
    <string name="tab_send_receipt">Отправленные</string>
    <string name="navigation_drawer_open">navi_open</string>
    <string name="navigation_drawer_close">navi_close</string>
    <string name="close">ЗАКРЫТЬ</string>
    <string name="cancel">ОТМЕНА</string>
    <string name="title_dialog_exit">Закрыть Mailer?</string>
    <string name="title_receipt_sale">Чек продажи № %s на %d позиции</string>
    <string name="title_receipt_payback">Чек возврата № %s на %d позиции</string>
    <string name="tv_static_summ">Сумма %.02f руб.</string>
    <string name="receipt_detail_sale_num">Продажа №%s</string>
    <string name="receipt_detail_payback_sale_num">Возврат продажи №%s</string>
    <string name="receipt_detail_session_id">Смена №%d</string>
    <string name="title_empty_receipt_list">Журнал чеков пуст</string>
    <string name="receipt_item_position_cost">ЦЕНА = %.02f</string>
    <string name="receipt_item_single_position">%.003f X %.02f = %.02f</string>
    <string name="receipt_item_position_discount">СКИДКА = %.02f</string>

    <string name="receipt_item_nds">НДС %s = %.02f</string>
    <string name="title_session_fm">Смена %d</string>
    <string name="title_fd_num">ФД № %d</string>
    <string name="title_fp_num">ФП: %d</string>
    <string name="title_rn_kkt">РН ККТ: %s</string>
    <string name="title_zn_kkt">ЗН ККТ: ↑%s↑</string>
    <string name="title_site_fns">Сайт ФНС: www.nalog.ru</string>
    <string name="title_fn_num">ФН № %d</string>
    <string name="title_inn_num">ИНН: %d</string>
    <string name="title_receipts_count">Количество чеков</string>
    <string name="title_send_sms">Отправлено sms</string>
    <string name="title_send_email">Отправлено E-mail</string>
    <string name="value_left_menu">%d шт</string>
    <string name="title_sim">Ваши SIM-карты</string>
    <string name="title_about">О приложении</string>
    <string name="button_send">ОТПРАВИТЬ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_input_sms">Введите номер</string>
    <string name="text_input_email">Введите E-mail</string>
    <string name="subtitle_send_dialog">от %s</string>
    <string name="title_send_dialog">Введите данные для отправки чека № %s</string>
    <string name="title_save_contact">Сохранить контакты</string>
    <string name="dialog_title_send_email">Отправить E-mail</string>
    <string name="dialog_title_send_sms">Отправить на телефон</string>
    <string name="not_found">Нет номеров соответсвующих запросу</string>
    <string name="title_button_delete">УДАЛИТЬ</string>
    <string name="title_button_save">СОХРАНИТЬ</string>
    <string name="delete_type_phone">Удалить номер?</string>
    <string name="delete_type_email">Удалить E-mail?</string>
    <string name="edit_type_email">Редактировать E-mail</string>
    <string name="delete_popup">Удалить</string>
    <string name="edit_item_popup">Редактировать</string>
    <string name="receipt_type_sell">ПРИХОД</string>
    <string name="receipt_type_payback_sell">ВОЗВРАТ ПРИХОДА</string>
    <string name="receipt_send_confirm_subtitle">Чек №%s будет отправлен после оплаты</string>
    <string name="receipt_send_confirm_subtitle_without_number">Чек будет отправлен после оплаты</string>
    <string name="about_menu_title_feedback">Обратная связь</string>
    <string name="about_menu_title_rate_the_app">Оцените приложение</string>
    <string name="about_menu_title_privacy_policy">Политика конфиденциальности</string>
    <string name="about_menu_title_user_agreement">Пользовательское соглашение</string>
    <string name="about_menu_title_licenses">Лицензии</string>
    <string name="about_menu_title_data_protection">Защита данных</string>


</resources>