<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_exit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_lt">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/title_dialog_exit"
        android:textColor="@color/fonts_lt"
        android:textSize="@dimen/text_size_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/close"
        android:textColor="@color/header_lt"
        android:textSize="@dimen/text_size_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/cancel"
        android:textColor="@color/icon_lt"
        android:textSize="@dimen/text_size_dialog"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintEnd_toStartOf="@+id/close"
        app:layout_constraintTop_toTopOf="@+id/close" />
</androidx.constraintlayout.widget.ConstraintLayout>